Removed some methods not available in java 8